--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^29.0.2",
     "jest": "^29.0.3",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
